# llmz

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  noxfile.py  objects.inv  pyproject.toml
.github/workflows/: python-package-ci.yml
api/: index.html
docs/: api.md  index.md
search/: search_index.json
src/llmz/: __init__.py  checkpoint_handlers.py  checkpointing.py  datasets.py  evaluate.py  generate.py  gpt2.py  tokenizers.py  train.py  utils.py
src/llmz/components/: __init__.py  activations.py  attention.py  normalisation.py  transformers.py
tests/: conftest.py  test_activations.py  test_attention.py  test_datasets.py  test_func_train.py  test_generation.py  test_gpt2.py  test_hello_world.py  test_normalisation.py  test_tokenizers.py  test_train.py  test_transformers.py
tests/functional/: test_func_train.py
tests/unit/: test_checkpoint_handlers.py  test_checkpointing.py  test_datasets.py  test_evaluate.py  test_gpt2.py  test_train.py  test_utils.py
