[project]
name = "llmz"
version = "0.1.0.dev0"
description = "The llmz Python package."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.5.1",
]

[project.urls]
"Homepage" = "https://github.com/AlexIoannides/llmz"
"Bug Tracker" = "https://github.com/AlexIoannides/llmz/issues"
"Docs" = "http://alexioannides.com/llmz/"

[dependency-groups]
dev = [
    "black>=24.10.0",
    "icecream>=2.1.3",
    "mypy>=1.13.0",
    "nox>=2024.10.9",
    "pytest>=8.3.3",
    "ruff>=0.7.3",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.5.44",
    "mkdocstrings[python]>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88

[tool.ruff]
src = ["src"]
line-length = 88
lint.select = [
  "D",   # pydocstyle
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "I",   # isort
  "UP",  # pyupgrade
  "W",   # pycodestyle warnings
]
lint.ignore = [
  "D203",    # fix pydocstyle warning
  "D213",    # fix pydocstyle warning
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
  "D103",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
